# vscpl2drv-websrv

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Makefile  Makefile.in  README.md  VERSION.m4  build_debian_package.sh  config.h  configure  configure.ac
.github/workflows/: build.yml  cmake.yml
debian_orig/: README.Debian  README.source  changelog  control  copyright  install  links  rules  shlibs
debug/linux/: save.vscpd.xml  vscpd.json  vscpd.xml  vscpl2drv-websrv.conf  websrv.json
forms/settings/: form.html
install-files/: vscpl2drv-tcpiplink.conf
man/: .gitignore  CMakeLists.txt  make_man_pages  vscpl2drv-tcpiplink.1  vscpl2drv-websrv.1.md
resources/: vscpl2drv-tcpiplink.conf  vscpl2drv-websrv.conf
resources/linux/: users.json
src/: .gitignore  Makefile  Makefile.in  duktape_vscp_func.cpp  duktape_vscp_wrkthread.cpp  duktape_vscp_wrkthread.h  lua_vscp_func.cpp  lua_vscp_wrkthread.cpp  lua_vscp_wrkthread.h  restsrv.cpp  restsrv.h  tcpiplink.cpp  tcpiplink.h  version.h  vscpl2drv-tcpiplink.cpp  vscpl2drv-websock.cpp  vscpl2drv-websock.h  vscpl2drv-websrv.cpp  vscpl2drv-websrv.h  webdefs.h  webobj.cpp  webobj.h  websocketsrv.cpp  websocketsrv.h  websockobj.cpp  websockobj.h  websrv.cpp  websrv.h
